Simplify database config: auto-derive sync URL from async URL

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ WHATSAPP_API_URL=http://localhost:3000
 WHATSAPP_API_KEY=your_api_key_here
 
 # Database Configuration
+# Railway: Use ${{pgvector.DATABASE_URL}} or your pgvector connection URL
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/whatsapp_monitor
-DATABASE_SYNC_URL=postgresql://postgres:postgres@localhost:5432/whatsapp_monitor
 
 # Google Gemini Configuration
 GOOGLE_API_KEY=your_google_api_key_here
