--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,7 @@
 [build]
-builder = "NIXPACKS"
+builder = "DOCKERFILE"
 
 [deploy]
-startCommand = "python main.py"
+startCommand = "uvicorn api:app --host 0.0.0.0 --port 8000"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
