--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ whatsapp-api-client-python==0.0.49
 
 # Google Gemini AI
 google-generativeai==0.8.3
+packaging>=21.0
 
 # Configuration
 pydantic-settings==2.6.0
