--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,6 @@ whatsapp-api-client-python==0.0.49
 
 # Google Gemini AI
 google-generativeai==0.8.3
-packaging>=21.0
 
 # Configuration
 pydantic-settings==2.6.0
@@ -23,3 +22,5 @@ pytz==2024.1
 
 # Utilities
 structlog==24.4.0
+packaging>=21.0
+tenacity==9.0.0
