--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ uvicorn[standard]==0.32.0
 sqlmodel==0.0.22
 sqlalchemy[asyncio]==2.0.35
 aiosqlite==0.20.0
+asyncpg==0.29.0
 greenlet==3.0.0
 
 # Green API WhatsApp
